Småfiks som svar på endel PR kommentarer